# setfont

./: .gitignore  Cargo.toml
.github/ISSUE_TEMPLATE/: app.md
src/: app.rs  cli.rs  ext.rs  font.rs  main.rs  shared.rs
src/app/: alacritty.rs  atom.rs  mod.rs  setting.rs  tilix.rs
